first page done

--- a/index.html
+++ b/index.html
@@ -7,8 +7,14 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1 class="head">POlObOOk</h1>
+    <div class="PoloBook">
+        <div class="head"></div>
+    <h1 class="header">POlObOOk</h1>
     <div class="container">
+        <div class="left">
+        <img src="/Polo-book/images.png">
+        </div>
+    <div class="right">
         <label for="uname"><b>Username</b></label></br>
         <input type="text" placeholder="Enter Username" name="uname" required></br>
     
@@ -20,9 +26,10 @@
           <input type="checkbox" checked="checked" name="remember"> Remember me
         </label>
       </div>
+    </div>
       <div class="footer">
         <footer>Powered by Google</footer>
       </div>
-    
+    </div>
 </body>
 </html>
