Craet background color

--- a/firstpage.html
+++ b/firstpage.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Polo-book</title>
+    <link href="styles.css" rel="stylesheet">
 </head>
 <body>
     <div class="firstpage">
     <div class="Top">
         <div class="lftop">
-        <h3 class="main">PolobooK</h3>
+        <h3 class="main"></h3>
         <input type="searchBar" placeholder="Polo-book" name="searchbar">
     </div>
     <div class="rttop">
