--- a/firstpage.html
+++ b/firstpage.html
@@ -10,8 +10,12 @@
     <div class="firstpage">
     <div class="Top">
         <div class="lftop">
-        <h3 class="main"></h3>
-        <input type="searchBar" placeholder="Polo-book" name="searchbar">
+            <div class="ltp">
+        <div class="main"></div>
+          </div>
+          <div class="rtp">
+        <input type="text" placeholder="Polo-book" name="searchbar">
+            </div>  
     </div>
     <div class="rttop">
         <div class="para">
