check with some view port section

--- a/firstpage.html
+++ b/firstpage.html
@@ -5,26 +5,41 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Polo-book</title>
     <link href="styles.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 </head>
 <body>
     <div class="firstpage">
     <div class="Top">
         <div class="lftop">
             <div class="ltp">
-        <div class="main"></div>
+        <div class="main">
+            <i class="fa-brands fa-wordpress"></i>
+        </div>
           </div>
           <div class="rtp">
         <input type="text" placeholder="Polo-book" name="searchbar">
-            </div>  
+        <button type="submit"><i class="fa-regular fa-magnifying-glass"></i></button>
+        </div>  
     </div>
     <div class="rttop">
         <div class="para">
             <p>John</p>
-            <button><i class="fa-solid fa-user"></i></button>
+            <div><i class="fa-solid fa-user-group"></i></div>
+            <div><i class="fa-solid fa-message"></i></div>
+            <div><i class="fa-regular fa-earth-americas"></i></div>
         </div>
     </div>
     </div>
-    <div class="Middle"></div>
+    <div class="Middle">
+        <div class="Middlelt">
+            <div class="space"></div>
+            <div class="P1"><i class="fa-solid fa-house"></i> Home</div>
+            <div class="P2"><i class="fa-solid fa-bars"></i> About</div>
+            <div class="P3"><i class="fa-regular fa-thumbs-up"></i> Likes</div>
+            <div class="P4"><i class="fa-solid fa-gear"></i> Setting</div>
+        </div>
+        <div class="Middlert">hello</div>
+    </div>
     <div class="container1"></div>
     <div class="bottom"></div>
     </div>
