--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PoloBook</title>
     <link rel="stylesheet" href="styles.css">
-    <link href="/Polo-book/Polobook.js">
 </head>
 <body>
     <div class="PoloBook">
@@ -20,16 +19,13 @@
         </div>
     <div class="right">
         <label for="uname"><b>Username</b></label></br>
-        <input type="text" placeholder="Enter Username" name="uname" required></br>
+        <input type="text" placeholder="Enter Username" name="uname" required><br>
     
         <label for="psw"><b>Password</b></label></br>
         <input type="password" type="checkbox" placeholder="Enter Password" name="psw" required></br>
       
         <button class="login1" type="submit">Login</button></br>
-        <label>
-          <input type="checkbox" checked="checked" name="remember"> Remember me
-        </label>
-      </div>
+        </div>
     </div>
       <div class="footer">
         <footer>Powered by Google</footer>
