--- a/firstpage.html
+++ b/firstpage.html
@@ -38,9 +38,9 @@
             <div class="P3"><i class="fa-regular fa-thumbs-up"></i> Likes</div>
             <div class="P4"><i class="fa-solid fa-gear"></i> Setting</div>
         </div>
-        <div class="Middlert">hello1</div>
+        <div class="Middlert">hello</div>
     </div>
-    <div class="container1"></div>
+    <div class="container1">1</div>
     <div class="bottom"></div>
     </div>
     
