--- a/firstpage.html
+++ b/firstpage.html
@@ -31,18 +31,27 @@
     </div>
     </div>
     <div class="Middle">
-        <div class="Middlelt">
+        <div class="Middleft">
             <div class="space"></div>
             <div class="P1"><i class="fa-solid fa-house"></i> Home</div>
             <div class="P2"><i class="fa-solid fa-bars"></i> About</div>
             <div class="P3"><i class="fa-regular fa-thumbs-up"></i> Likes</div>
             <div class="P4"><i class="fa-solid fa-gear"></i> Setting</div>
         </div>
-        <div class="Middlert">hello</div>
+        <div class="Middright">
+        <div class="midlt">
+        <p class="section">Home</p>
+        <div class="space1"></div>
+        <p class="section">About</p>
+        <div class="space2"></div>
+        <p class="section">Likes</p>
+        <div class="space3"></div>
+        </div>
+        <div class="midrt">hello</div>
+        </div>
     </div>
-    <div class="container1">1</div>
+    <div class="container1"></div>
     <div class="bottom"></div>
-    </div>
-    
+    </div>    
 </body>
 </html>
