--- a/firstpage.html
+++ b/firstpage.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Polo-book</title>
     <link href="styles.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+    <script src="Polobook.js"></script>
 </head>
 <body>
     <div class="firstpage">
@@ -18,15 +18,15 @@
           </div>
           <div class="rtp">
         <input type="text" placeholder="Polo-book" name="searchbar">
-        <button type="submit"><i class="fa-regular fa-magnifying-glass"></i></button>
+        <i class="fa-regular fa-magnifying-glass"></i>x
         </div>  
     </div>
     <div class="rttop">
-        <div class="para">
-            <p>John</p>
-            <div><i class="fa-solid fa-user-group"></i></div>
-            <div><i class="fa-solid fa-message"></i></div>
-            <div><i class="fa-regular fa-earth-americas"></i></div>
+        <div class="right-headding">
+            <p class="name">John</p>
+            <div class="icons"><i class="fa-solid fa-user-group"></i></div>
+            <div class="icons"><i class="fa-solid fa-message"></i></div>
+            <div class="icons"><i class="fa-regular fa-earth-americas"></i></div>
         </div>
     </div>
     </div>
