--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+  
     <div class="PoloBook">
       <div class="head">
     <h1 class="header">POlObOOK</h1>
@@ -24,7 +25,7 @@
         <label for="psw"><b>Password</b></label></br>
         <input type="password" type="checkbox" placeholder="Enter Password" name="psw" required></br>
       
-        <button class="login1" type="submit">Login</button></br>
+        <button class="login1" type="submit" onclick="location.href='firstpage.html'">Login</button></br>
         </div>
     </div>
       <div class="footer">
