--- a/firstpage.html
+++ b/firstpage.html
@@ -17,8 +17,7 @@
         </div>
           </div>
           <div class="rtp">
-        <input type="text" placeholder="Polo-book" name="searchbar">
-        <i class="fa-regular fa-magnifying-glass"></i>x
+        <input type="text" placeholder="Search....">
         </div>  
     </div>
     <div class="rttop">
@@ -47,7 +46,22 @@
         <p class="section">Likes</p>
         <div class="space3"></div>
         </div>
-        <div class="midrt">hello</div>
+        <div class="midrt">
+            <h3 class="mhead">Setting</h3>
+        <div class="Setting-app">
+            <ul class="Salist">
+                <li class="setting-list">General</li>
+                <li class="setting-list">Security and login</li>
+                <li class="setting-list">Privacy</li>
+                <li class="setting-list">Timeline and Tagging</li>
+                <li class="setting-list">Location</li>
+                <li class="setting-list">Videos and Photos</li>
+                <li class="setting-list">Sounds</li>
+                <li class="setting-list">Language</li>
+                <li class="setting-list">Face Recognition</li>
+            </ul>
+        </div>
+    </div>
         </div>
     </div>
     <div class="container1"></div>
