add men image and add paddin in firstpage html

--- a/firstpage.html
+++ b/firstpage.html
@@ -13,26 +13,27 @@
         <div class="lftop">
             <div class="ltp">
         <div class="main">
-            <i class="fa-brands fa-wordpress"></i>
+            <i class="fa-brands fa-wordpress logo-design-button"></i>
         </div>
           </div>
           <div class="rtp">
-        <input type="text" placeholder="Search....">
+        <input type="text" placeholder="Search...." class="Search-bar-button">
+        <button class="fa-magnifying-glass-button"><i class="fa-solid fa-magnifying-glass"></i></button>
         </div>  
     </div>
     <div class="rttop">
         <div class="right-headding">
             <p class="name">John</p>
-            <div class="icons"><i class="fa-solid fa-user-group"></i></div>
-            <div class="icons"><i class="fa-solid fa-message"></i></div>
-            <div class="icons"><i class="fa-regular fa-earth-americas"></i></div>
+            <div class="icons"><i class="fa-solid fa-user-group people-icon"></i></div>
+            <div class="icons"><i class="fa-solid fa-message message-icon"></i></div>
+            <div class="icons"><i class="fa-regular fa-earth-americas earth-americas-icon"></i></div>
         </div>
     </div>
     </div>
     <div class="Middle">
         <div class="Middleft">
-            <div class="space"></div>
-            <div class="P1"><i class="fa-solid fa-house"></i> Home</div>
+            <div class="space"><img src="./download.jpeg" class="men-img"></div>
+            <div class="P1"><i class="fa-solid fa-house"></i> Home </div>
             <div class="P2"><i class="fa-solid fa-bars"></i> About</div>
             <div class="P3"><i class="fa-regular fa-thumbs-up"></i> Likes</div>
             <div class="P4"><i class="fa-solid fa-gear"></i> Setting</div>
