add css in margin and padding

--- a/firstpage.html
+++ b/firstpage.html
@@ -32,11 +32,13 @@
     </div>
     <div class="Middle">
         <div class="Middleft">
-            <div class="space"><img src="./download.jpeg" class="men-img"></div>
-            <div class="P1"><i class="fa-solid fa-house"></i> Home </div>
-            <div class="P2"><i class="fa-solid fa-bars"></i> About</div>
-            <div class="P3"><i class="fa-regular fa-thumbs-up"></i> Likes</div>
-            <div class="P4"><i class="fa-solid fa-gear"></i> Setting</div>
+            <div class="space"><img src="./images/download.jpeg" class="men-img"></div>
+            <div class="home-basics-button">
+            <button class="home-button"><i class="fa-solid fa-house"></i> Home </button>
+            <button class="about-button"><i class="fa-solid fa-bars"></i> About</button>
+            <button class="likes-button"><i class="fa-regular fa-thumbs-up"></i> Likes</button>
+            <button class="setting-button"><i class="fa-solid fa-gear"></i> Setting</button>
+        </div>     
         </div>
         <div class="Middright">
         <div class="midlt">
