--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </div>
     <div class="container">
         <div class="left">
-        <img src="/Polo-book/images.png">
+        <img src="./images/images.png">
         </div>
     <div class="right">
         <label for="uname"><b>Username</b></label></br>
