create sign in button element in  css

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
   
     <div class="PoloBook">
       <div class="head">
-    <h1 class="header">POlObOOK</h1>
-      <button class="sign-in">Sign in</button>
-      <button class="log-in">Log in</button>
+    <h1 class="header-sign">POlOBOOK</h1>
+      <button onclick="" class="sign-in-button">Sign in</button>
+      <button onclick="" class="log-in-button">Log in</button>
     </div>
     <div class="container">
         <div class="left">
