Creat a padding in head section

--- a/firstpage.html
+++ b/firstpage.html
@@ -8,15 +8,15 @@
     <script src="Polobook.js"></script>
 </head>
 <body>
-    <div class="firstpage">
-    <div class="Top">
+    <div class="firstpage-css">
+    <div class="Top-firstpage">
         <div class="lftop">
             <div class="ltp">
         <div class="main">
             <i class="fa-brands fa-wordpress logo-design-button"></i>
         </div>
           </div>
-          <div class="rtp">
+          <div class="rtp" >
         <input type="text" placeholder="Search...." class="Search-bar-button">
         <button class="fa-magnifying-glass-button"><i class="fa-solid fa-magnifying-glass"></i></button>
         </div>  
@@ -28,8 +28,7 @@
             <div class="icons"><i class="fa-solid fa-message message-icon"></i></div>
             <div class="icons"><i class="fa-regular fa-earth-americas earth-americas-icon"></i></div>
         </div>
-    </div>
-    </div>
+        </div>
     <div class="Middle">
         <div class="Middleft">
             <div class="space"><img src="./images/download.jpeg" class="men-img"></div>
@@ -39,7 +38,6 @@
             <button class="likes-button"><i class="fa-regular fa-thumbs-up"></i> Likes</button>
             <button class="setting-button"><i class="fa-solid fa-gear"></i> Setting</button>
         </div>     
-        </div>
         <div class="Middright">
         <div class="midlt">
         <p class="section">Home</p>
@@ -50,25 +48,22 @@
         <div class="space3"></div>
         </div>
         <div class="midrt">
-            <h3 class="mhead">Setting</h3>
+            <h4 class="middle-head-heading">Setting</h4>
         <div class="Setting-app">
-            <ul class="Salist">
-                <li class="setting-list">General</li>
-                <li class="setting-list">Security and login</li>
-                <li class="setting-list">Privacy</li>
-                <li class="setting-list">Timeline and Tagging</li>
-                <li class="setting-list">Location</li>
-                <li class="setting-list">Videos and Photos</li>
-                <li class="setting-list">Sounds</li>
-                <li class="setting-list">Language</li>
-                <li class="setting-list">Face Recognition</li>
+                <P class="setting-list">General</P>
+                <p class="setting-list">Security and login</p>
+                <p class="setting-list">Privacy</p>
+                <p class="setting-list">Timeline and Tagging</p>
+                <p class="setting-list">Location</p>
+                <p class="setting-list">Videos and Photos</p>
+                <p class="setting-list">Sounds</p>
+                <p class="setting-list">Language</p>
+                <p class="setting-list">Face Recognition</p>
             </ul>
         </div>
     </div>
         </div>
     </div>
-    <div class="container1"></div>
-    <div class="bottom"></div>
     </div>    
 </body>
 </html>
