--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <!--<meta name="viewport" content="width=device-width, initial-scale=1.0">-->
     <title>PoloBook</title>
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -11,7 +11,7 @@
     <div class="PoloBook">
       <div class="head">
     <h1 class="header-sign">POlOBOOK</h1>
-      <button onclick="" class="sign-in-button">Sign in</button>
+      <button onclick="" class="sign-in-button sign-in-button-js">Sign in</button>
       <button onclick="" class="log-in-button">Log in</button>
     </div>
     <div class="container">
