Create a new folder

--- a/Indexhtml/index.html
+++ b/Indexhtml/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
    <!--<meta name="viewport" content="width=device-width, initial-scale=1.0">-->
     <title>PoloBook</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="/Polo-book/Styles/styles.css">
 </head>
 <body>
   
@@ -16,7 +16,7 @@
     </div>
     <div class="container">
         <div class="left">
-        <img src="./images/images.png">
+        <img src="/Polo-book/images/images.png">
         </div>
     <div class="right">
         <label for="uname"><b>Username</b></label></br>
