Create a css in firstpage

--- a/Indexhtml/firstpage.html
+++ b/Indexhtml/firstpage.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Polo-book</title>
-    <link href="styles.css" rel="stylesheet">
+    <link href="/Polo-book/Styles/firstpage.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <script src="Polobook.js"></script>
 </head>
@@ -11,7 +11,7 @@
   <div class="head-first-page">
     <div class="main-section-bar">
    <div class="left-side-logo-search-bar">
-    <i class="fa-brands fa-wordpress logo-design-button"></i>
+    <i class="fa-brands fa-wordpress logo-design-button logo-icons"></i>
     <input placeholder="search..." type="search" class="search-bar">
     <button class="serach-icon-button"><i class="fa-solid fa-magnifying-glass"></i></button>
    </div>
