lets check scrip

--- a/Indexhtml/firstpage.html
+++ b/Indexhtml/firstpage.html
@@ -5,7 +5,9 @@
     <title>Polo-book</title>
     <link href="/Polo-book/Styles/firstpage.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-    <script src="Polobook.js"></script>
+    <script src="Polobook.js">
+      console.log('hello');
+    </script>
 </head>
 <body>
   <div class="head-first-page">
